--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <header class="header">  
         <img src="./avatar.png" alt="Аватар Александра Жевноватенко" class="header__avatar" />  
         <div class="header__textContainer">  
-            <h1 class="header__title">Александр Жевноватенко</h1>  
+            <h1 class="header__title">Никита Кол игривый</h1>  
             <h3 class="header__subtitle">1000-7</h3>  
         </div>  
     </header>  
