--- a/index.html
+++ b/index.html
@@ -550,7 +550,7 @@
 <div class="map-container">
     <i class="fas fa-map-marked-alt"></i>
     <div class="map-title">Мы находимся в Приморском крае</div>
-    <iframe src="https://yandex.az/maps/-/CHRdvQzU" class="map-iframe" allowfullscreen="true"></iframe>
+    <iframe src="https://yandex.ru/map-widget/v1/-/CHRdvQzU" class="map-iframe" allowfullscreen="true"></iframe>
 </div>
         </div>
     </div>
