--- a/index.html
+++ b/index.html
@@ -32,10 +32,12 @@
 
         body {
             font-family: 'Montserrat', sans-serif;
-            background-color: var(--bg-light);
-            line-height: 1.7;
+            background-color: var(--bg-color);
+            color: var(--text-color);
+            line-height: 1.6;
             overflow-x: hidden;
             transition: background-color 0.5s ease;
+            min-height: 100vh;
         }
 
         body::before {
